# phoenix_doom

./: CMakeLists.txt  Differences To 3DO Doom.md  Differences To 3DO Doom.txt  LICENSE  README.md  TODO.txt
cmake/: BuildSetup.cmake  HelperFunctions.cmake
docs/: Building The Code.md  Credits.md  How To Play.md  Known Issues.md  License & Copyright.md  Q&A.md
docs/AIFF and AIFC File Format/: Audio Interchange File Format.html
docs/AIFF and AIFC File Format/AIFC to Wav SDX2 format decoder/: aifc2wav-5.1.c
docs/AIFF and AIFC File Format/Possible SDX2 AIFC format Decoder/: About.txt
docs/Cel File Format/: Source Of Info.txt
docs/OperaFS Tools And Source/: Source.txt
lib/: CMakeLists.txt
lib/burger/: abs.c  allocahandle.c  allocapointer.c  atexit.c  bombflag.c  burger.h  burger.make  clearthescreen.c  compacthandles.c  currentpalette.c  deallocahandle.c  deallocapointer.c  detachresource2.c  detectmouse.c  dlzss.s  drawachar.s  drawarect.c  drawastring.c  drawmshape.c  drawrezcentershape.c  drawrezshape.c  drawshape.c  dumphandles.c  erasembshape.c  exit2.c  fadeto.c  fadetoblack.c  fadetoptr.c  fatal.c  findahandle.c  flushkeys.c  fontdata.c  fontrestorestate.c  fontsavestate.c  fontsetcolor.c  fontusemask.c  fontusezero.c  getahandlesize.c  getapixel.s  getrandom.c  (+64 more)
lib/intmath/: im_dec2int.c  im_div.s  im_fixdiv.s  im_fixmul.s  im_hiword.c  im_long2fix.c  im_loword.c  im_multiply.c  im_sdivide.c  im_udivide.c  intmath.h  intmath.make
lib/mvelib/: mvelib.h  mvelib.make  nfadvance.s  nfhicolordecomp.c  nfhicolordecomp.s  nfhicolordecomp.s2  nfhicolordecomp.snew
lib/string/: memchr.s  memcmp.s  memmove.s  memset.s  strcat.s  strchr.s  strcmp.s  strcpy.s  strcspn.s  stricmp.s  string.make  strlen.s  strlwr.s  strncat.s  strncmp.s  strncpy.s  strrev.s  strset.s  strtol.s  strtoul.s  strupr.s
source/: AudioData.h  AudioDataMgr.cpp  AudioDataMgr.h  Automap_Main.cpp  Automap_Main.h  Base.cpp  Base.h  Burger.cpp  Burger.h  CMakeLists.txt  Ceiling.cpp  CelUtils.cpp  CelUtils.h  Change.cpp  Change.h  Data.cpp  Data.h  Doom.h  DoomResources.cpp  DoomResources.h  DoomRez.h  Doom_Main.cpp  Doom_Main.h  Doors.cpp  Endian.h  Enemy.cpp  Enemy.h  F_Main.cpp  Finale_Main.cpp  Finale_Main.h  Floor.cpp  Floor.h  Game.cpp  Game.h  Info.cpp  Info.h  Inter.cpp  Interactions.cpp  Intermission_Main.cpp  Intermission_Main.h  (+129 more)
source/Audio/: Audio.cpp  Audio.h  AudioData.h  AudioDataMgr.cpp  AudioDataMgr.h  AudioLoader.cpp  AudioLoader.h  AudioOutputDevice.cpp  AudioOutputDevice.h  AudioSystem.cpp  AudioSystem.h  AudioVoice.h  Sound.cpp  Sound.h  Sounds.h
source/Base/: Angle.h  BitInputStream.h  BitStream.h  ByteInputStream.h  ByteStream.h  ControllerInput.cpp  ControllerInput.h  Endian.h  FMath.h  FatalErrors.cpp  FileInputStream.cpp  FileInputStream.h  FileUtils.cpp  FileUtils.h  Finally.h  Fixed.h  FloatMath.h  FourCID.h  IniUtils.cpp  IniUtils.h  Input.cpp  Input.h  Macros.h  MathUtils.h  Mem.h  MemStream.h  MouseButton.h  Random.cpp  Random.h  Resource.h  ResourceMgr.cpp  ResourceMgr.h  Tables.cpp  Tables.h
source/GFX/: Blit.h  CelImages.cpp  CelImages.h  CelUtils.cpp  CelUtils.h  ImageData.h  Render.h  Render_Data.cpp  Render_Main.cpp  Render_Phase1.cpp  Render_Phase2.cpp  Render_Phase6.cpp  Render_Phase7.cpp  Render_Phase8.cpp  Renderer.cpp  Renderer.h  Renderer_BspTraversal.cpp  Renderer_Draw.cpp  Renderer_FlatDraw.cpp  Renderer_FloorDraw.cpp  Renderer_Internal.h  Renderer_Phase1.cpp  Renderer_Phase2.cpp  Renderer_Phase6.cpp  Renderer_Phase7.cpp  Renderer_Phase8.cpp  Renderer_PostFx.cpp  Renderer_SpriteDraw.cpp  Renderer_TODO.cpp  Renderer_WallDraw.cpp  Renderer_WallPrep.cpp  Renderer_WeaponDraw.cpp  Sprites.cpp  Sprites.h  Textures.cpp  Textures.h  Video.cpp  Video.h
source/Game/: Cheats.cpp  Cheats.h  Config.cpp  Config.h  Controls.cpp  Controls.h  Data.cpp  Data.h  DoomDefines.h  DoomMain.cpp  DoomMain.h  DoomRez.h  Doom_Main.cpp  Game.cpp  Game.h  GameDataFS.cpp  GameDataFS.h  Prefs.cpp  Prefs.h  Resources.cpp  Resources.h  Tick.cpp  Tick.h  TickCounter.cpp  TickCounter.h  WipeFx.cpp  WipeFx.h
source/Map/: Ceiling.cpp  Ceiling.h  Change.cpp  Change.h  Doors.cpp  Doors.h  Floor.cpp  Floor.h  Lights.cpp  Lights.h  Map.cpp  Map.h  MapData.cpp  MapData.h  MapUtil.cpp  MapUtil.h  Platforms.cpp  Platforms.h  Setup.cpp  Setup.h  Sight.cpp  Sight.h  Specials.cpp  Specials.h  Switch.cpp  Switch.h
source/Things/: Base.cpp  Enemy.cpp  Enemy.h  Info.cpp  Info.h  Interactions.cpp  Interactions.h  MapObj.cpp  MapObj.h  Move.cpp  Move.h  Player.h  PlayerSprites.cpp  PlayerSprites.h  Shoot.cpp  Shoot.h  Slide.cpp  Slide.h  States.h  Teleport.cpp  Teleport.h  User.cpp  User.h
source/ThreeDO/: CDImageFileInputStream.cpp  CDImageFileInputStream.h  CelUtils.cpp  CelUtils.h  ChunkedStreamFileUtils.cpp  ChunkedStreamFileUtils.h  MovieDecoder.cpp  MovieDecoder.h  OperaFS.cpp  OperaFS.h
source/UI/: Automap.cpp  Automap_Main.cpp  Automap_Main.h  FinaleScreen.cpp  Finale_Main.cpp  Finale_Main.h  IntermissionScreen.cpp  IntermissionScreen.h  Intermission_Main.cpp  Intermission_Main.h  IntroLogos.cpp  IntroLogos.h  IntroMovies.cpp  IntroMovies.h  MainMenu.cpp  MainMenu.h  Menu_Main.cpp  Menu_Main.h  OptionsMenu.cpp  OptionsMenu.h  Options_Main.cpp  Options_Main.h  StatusBarUI.cpp  StatusBarUI.h  StatusBar_Main.cpp  StatusBar_Main.h  TitleScreens.cpp  TitleScreens.h  UIUtils.cpp  UIUtils.h  WipeFx.cpp  WipeFx.h
third_party_libs/libsdl/: CMakeLists.txt
third_party_libs/libsdl/sdl2/include/: SDL_config_macosx.h  SDL_config_windows.h
third_party_libs/libsdl/sdl2/src/events/: SDL_mouse.c
third_party_libs/libsoundio/: CMakeLists.txt  config.h
third_party_libs/openal/: CMakeLists.txt  config.h  version.h
third_party_libs/sdl/include/: SDL_config_macosx.h  SDL_config_windows.h
thirdy_party_docs_and_tools/Cel File Format/: 3DO File Format.html
thirdy_party_docs_and_tools/Cinepak Video Codec/: Cinepak (CVID) stream format.txt
thirdy_party_docs_and_tools/OperaFS Tools And Source/: Sources.txt
tools/: OperaFS.txt
tools/OperaFS/: Readme.txt
(+30 files in other folders)
