cmake_minimum_required (VERSION 3.14)

project(PhoenixDoom)

set(GAME_NAME PhoenixDoom)
set(BURGERLIB_NAME BurgerLib)
set(LIBSDL_NAME SDL)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)

# Clang, Apple Clang, or GCC - enable debugging
if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang" OR 
    "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU"
)
    set(CMAKE_C_FLAGS -g)
    set(CMAKE_CXX_FLAGS -g)
endif()

set(BURGERLIB_SRC_DIR "${PROJECT_SOURCE_DIR}/lib")
set(GAME_SRC_DIR "${PROJECT_SOURCE_DIR}/source")
set(THIRD_PARTY_LIBS_DIR "${PROJECT_SOURCE_DIR}/third_party_libs")
set(LIBSDL_DIR "${THIRD_PARTY_LIBS_DIR}/sdl")
set(LIBSDL_SRC_DIR "${LIBSDL_DIR}/src")
set(LIBSDL_INCLUDE_DIR "${LIBSDL_DIR}/include")

###################################################################################################
# SDL
###################################################################################################
set(LIBSDL_INCLUDE_PATHS
)

# TODO: Handle other platforms here
set(LIBSDL_LINK_LIBRARIES
    Imm32.lib
    Mincore.lib
    User32.lib
)

set(LIBSDL_SOURCES
    ${LIBSDL_INCLUDE_DIR}/begin_code.h
    ${LIBSDL_INCLUDE_DIR}/close_code.h
    ${LIBSDL_INCLUDE_DIR}/SDL.h
    ${LIBSDL_INCLUDE_DIR}/SDL_assert.h
    ${LIBSDL_INCLUDE_DIR}/SDL_atomic.h
    ${LIBSDL_INCLUDE_DIR}/SDL_audio.h
    ${LIBSDL_INCLUDE_DIR}/SDL_bits.h
    ${LIBSDL_INCLUDE_DIR}/SDL_blendmode.h
    ${LIBSDL_INCLUDE_DIR}/SDL_clipboard.h
    ${LIBSDL_INCLUDE_DIR}/SDL_config.h
    ${LIBSDL_INCLUDE_DIR}/SDL_config.h.cmake
    ${LIBSDL_INCLUDE_DIR}/SDL_config.h.in
    ${LIBSDL_INCLUDE_DIR}/SDL_config_minimal.h
    ${LIBSDL_INCLUDE_DIR}/SDL_config_windows.h
    ${LIBSDL_INCLUDE_DIR}/SDL_config_wiz.h
    ${LIBSDL_INCLUDE_DIR}/SDL_copying.h
    ${LIBSDL_INCLUDE_DIR}/SDL_cpuinfo.h
    ${LIBSDL_INCLUDE_DIR}/SDL_egl.h
    ${LIBSDL_INCLUDE_DIR}/SDL_endian.h
    ${LIBSDL_INCLUDE_DIR}/SDL_error.h
    ${LIBSDL_INCLUDE_DIR}/SDL_events.h
    ${LIBSDL_INCLUDE_DIR}/SDL_filesystem.h
    ${LIBSDL_INCLUDE_DIR}/SDL_gamecontroller.h
    ${LIBSDL_INCLUDE_DIR}/SDL_gesture.h
    ${LIBSDL_INCLUDE_DIR}/SDL_haptic.h
    ${LIBSDL_INCLUDE_DIR}/SDL_hints.h
    ${LIBSDL_INCLUDE_DIR}/SDL_joystick.h
    ${LIBSDL_INCLUDE_DIR}/SDL_keyboard.h
    ${LIBSDL_INCLUDE_DIR}/SDL_keycode.h
    ${LIBSDL_INCLUDE_DIR}/SDL_loadso.h
    ${LIBSDL_INCLUDE_DIR}/SDL_log.h
    ${LIBSDL_INCLUDE_DIR}/SDL_main.h
    ${LIBSDL_INCLUDE_DIR}/SDL_messagebox.h
    ${LIBSDL_INCLUDE_DIR}/SDL_mouse.h
    ${LIBSDL_INCLUDE_DIR}/SDL_mutex.h
    ${LIBSDL_INCLUDE_DIR}/SDL_name.h
    ${LIBSDL_INCLUDE_DIR}/SDL_opengl.h
    ${LIBSDL_INCLUDE_DIR}/SDL_opengl_glext.h
    ${LIBSDL_INCLUDE_DIR}/SDL_pixels.h
    ${LIBSDL_INCLUDE_DIR}/SDL_platform.h
    ${LIBSDL_INCLUDE_DIR}/SDL_power.h
    ${LIBSDL_INCLUDE_DIR}/SDL_quit.h
    ${LIBSDL_INCLUDE_DIR}/SDL_rect.h
    ${LIBSDL_INCLUDE_DIR}/SDL_render.h
    ${LIBSDL_INCLUDE_DIR}/SDL_revision.h
    ${LIBSDL_INCLUDE_DIR}/SDL_rwops.h
    ${LIBSDL_INCLUDE_DIR}/SDL_scancode.h
    ${LIBSDL_INCLUDE_DIR}/SDL_sensor.h
    ${LIBSDL_INCLUDE_DIR}/SDL_shape.h
    ${LIBSDL_INCLUDE_DIR}/SDL_stdinc.h
    ${LIBSDL_INCLUDE_DIR}/SDL_surface.h
    ${LIBSDL_INCLUDE_DIR}/SDL_system.h
    ${LIBSDL_INCLUDE_DIR}/SDL_syswm.h
    ${LIBSDL_INCLUDE_DIR}/SDL_thread.h
    ${LIBSDL_INCLUDE_DIR}/SDL_timer.h
    ${LIBSDL_INCLUDE_DIR}/SDL_touch.h
    ${LIBSDL_INCLUDE_DIR}/SDL_types.h
    ${LIBSDL_INCLUDE_DIR}/SDL_version.h
    ${LIBSDL_INCLUDE_DIR}/SDL_video.h
    ${LIBSDL_SRC_DIR}/atomic/SDL_atomic.c
    ${LIBSDL_SRC_DIR}/atomic/SDL_spinlock.c
    ${LIBSDL_SRC_DIR}/audio/dummy/SDL_dummyaudio.c
    ${LIBSDL_SRC_DIR}/audio/dummy/SDL_dummyaudio.h
    ${LIBSDL_SRC_DIR}/audio/SDL_audio.c
    ${LIBSDL_SRC_DIR}/audio/SDL_audio_c.h
    ${LIBSDL_SRC_DIR}/audio/SDL_audiocvt.c
    ${LIBSDL_SRC_DIR}/audio/SDL_audiodev.c
    ${LIBSDL_SRC_DIR}/audio/SDL_audiodev_c.h
    ${LIBSDL_SRC_DIR}/audio/SDL_audiotypecvt.c
    ${LIBSDL_SRC_DIR}/audio/SDL_mixer.c
    ${LIBSDL_SRC_DIR}/audio/SDL_sysaudio.h
    ${LIBSDL_SRC_DIR}/audio/SDL_wave.c
    ${LIBSDL_SRC_DIR}/audio/SDL_wave.h
    ${LIBSDL_SRC_DIR}/core/windows/SDL_directx.h
    ${LIBSDL_SRC_DIR}/core/windows/SDL_windows.c
    ${LIBSDL_SRC_DIR}/core/windows/SDL_windows.h
    ${LIBSDL_SRC_DIR}/core/windows/SDL_xinput.c
    ${LIBSDL_SRC_DIR}/core/windows/SDL_xinput.h
    ${LIBSDL_SRC_DIR}/cpuinfo/SDL_cpuinfo.c
    ${LIBSDL_SRC_DIR}/cpuinfo/SDL_simd.h
    ${LIBSDL_SRC_DIR}/dynapi/SDL_dynapi.c
    ${LIBSDL_SRC_DIR}/dynapi/SDL_dynapi.h
    ${LIBSDL_SRC_DIR}/dynapi/SDL_dynapi_overrides.h
    ${LIBSDL_SRC_DIR}/dynapi/SDL_dynapi_procs.h
    ${LIBSDL_SRC_DIR}/events/blank_cursor.h
    ${LIBSDL_SRC_DIR}/events/default_cursor.h
    ${LIBSDL_SRC_DIR}/events/scancodes_windows.h
    ${LIBSDL_SRC_DIR}/events/SDL_clipboardevents.c
    ${LIBSDL_SRC_DIR}/events/SDL_clipboardevents_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_displayevents.c
    ${LIBSDL_SRC_DIR}/events/SDL_displayevents_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_dropevents.c
    ${LIBSDL_SRC_DIR}/events/SDL_dropevents_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_events.c
    ${LIBSDL_SRC_DIR}/events/SDL_events_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_gesture.c
    ${LIBSDL_SRC_DIR}/events/SDL_gesture_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_keyboard.c
    ${LIBSDL_SRC_DIR}/events/SDL_keyboard_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_mouse.c
    ${LIBSDL_SRC_DIR}/events/SDL_mouse_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_quit.c
    ${LIBSDL_SRC_DIR}/events/SDL_sysevents.h
    ${LIBSDL_SRC_DIR}/events/SDL_touch.c
    ${LIBSDL_SRC_DIR}/events/SDL_touch_c.h
    ${LIBSDL_SRC_DIR}/events/SDL_windowevents.c
    ${LIBSDL_SRC_DIR}/events/SDL_windowevents_c.h
    ${LIBSDL_SRC_DIR}/file/SDL_rwops.c
    ${LIBSDL_SRC_DIR}/filesystem/dummy
    ${LIBSDL_SRC_DIR}/filesystem/dummy/SDL_sysfilesystem.c
    ${LIBSDL_SRC_DIR}/filesystem/windows
    ${LIBSDL_SRC_DIR}/filesystem/windows/SDL_sysfilesystem.c    
    ${LIBSDL_SRC_DIR}/haptic/dummy
    ${LIBSDL_SRC_DIR}/haptic/dummy/SDL_syshaptic.c
    ${LIBSDL_SRC_DIR}/haptic/SDL_haptic.c
    ${LIBSDL_SRC_DIR}/haptic/SDL_haptic_c.h
    ${LIBSDL_SRC_DIR}/haptic/SDL_syshaptic.h
    ${LIBSDL_SRC_DIR}/haptic/windows
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_dinputhaptic.c
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_dinputhaptic_c.h
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_windowshaptic.c
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_windowshaptic_c.h
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_xinputhaptic.c
    ${LIBSDL_SRC_DIR}/haptic/windows/SDL_xinputhaptic_c.h
    ${LIBSDL_SRC_DIR}/joystick/controller_type.h
    ${LIBSDL_SRC_DIR}/joystick/dummy
    ${LIBSDL_SRC_DIR}/joystick/dummy/SDL_sysjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/SDL_gamecontroller.c
    ${LIBSDL_SRC_DIR}/joystick/SDL_gamecontrollerdb.h
    ${LIBSDL_SRC_DIR}/joystick/SDL_joystick.c
    ${LIBSDL_SRC_DIR}/joystick/SDL_joystick_c.h
    ${LIBSDL_SRC_DIR}/joystick/SDL_sysjoystick.h
    ${LIBSDL_SRC_DIR}/joystick/sort_controllers.py
    ${LIBSDL_SRC_DIR}/joystick/steam
    ${LIBSDL_SRC_DIR}/joystick/steam/SDL_steamcontroller.c
    ${LIBSDL_SRC_DIR}/joystick/steam/SDL_steamcontroller.h
    ${LIBSDL_SRC_DIR}/joystick/windows
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_dinputjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_dinputjoystick_c.h
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_mmjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_windowsjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_windowsjoystick_c.h
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_xinputjoystick.c
    ${LIBSDL_SRC_DIR}/joystick/windows/SDL_xinputjoystick_c.h
    ${LIBSDL_SRC_DIR}/libm
    ${LIBSDL_SRC_DIR}/libm/e_atan2.c
    ${LIBSDL_SRC_DIR}/libm/e_exp.c
    ${LIBSDL_SRC_DIR}/libm/e_fmod.c
    ${LIBSDL_SRC_DIR}/libm/e_log.c
    ${LIBSDL_SRC_DIR}/libm/e_log10.c
    ${LIBSDL_SRC_DIR}/libm/e_pow.c
    ${LIBSDL_SRC_DIR}/libm/e_rem_pio2.c
    ${LIBSDL_SRC_DIR}/libm/e_sqrt.c
    ${LIBSDL_SRC_DIR}/libm/k_cos.c
    ${LIBSDL_SRC_DIR}/libm/k_rem_pio2.c
    ${LIBSDL_SRC_DIR}/libm/k_sin.c
    ${LIBSDL_SRC_DIR}/libm/k_tan.c
    ${LIBSDL_SRC_DIR}/libm/math_libm.h
    ${LIBSDL_SRC_DIR}/libm/math_private.h
    ${LIBSDL_SRC_DIR}/libm/s_atan.c
    ${LIBSDL_SRC_DIR}/libm/s_copysign.c
    ${LIBSDL_SRC_DIR}/libm/s_cos.c
    ${LIBSDL_SRC_DIR}/libm/s_fabs.c
    ${LIBSDL_SRC_DIR}/libm/s_floor.c
    ${LIBSDL_SRC_DIR}/libm/s_scalbn.c
    ${LIBSDL_SRC_DIR}/libm/s_sin.c
    ${LIBSDL_SRC_DIR}/libm/s_tan.c
    ${LIBSDL_SRC_DIR}/loadso
    ${LIBSDL_SRC_DIR}/loadso/dlopen
    ${LIBSDL_SRC_DIR}/loadso/dlopen/SDL_sysloadso.c
    ${LIBSDL_SRC_DIR}/loadso/dummy
    ${LIBSDL_SRC_DIR}/loadso/dummy/SDL_sysloadso.c
    ${LIBSDL_SRC_DIR}/loadso/windows
    ${LIBSDL_SRC_DIR}/loadso/windows/SDL_sysloadso.c
    ${LIBSDL_SRC_DIR}/main/dummy
    ${LIBSDL_SRC_DIR}/main/dummy/SDL_dummy_main.c
    ${LIBSDL_SRC_DIR}/main/windows
    ${LIBSDL_SRC_DIR}/main/windows/SDL_windows_main.c
    ${LIBSDL_SRC_DIR}/main/windows/version.rc
    ${LIBSDL_SRC_DIR}/render/opengl
    ${LIBSDL_SRC_DIR}/render/opengl/SDL_glfuncs.h
    ${LIBSDL_SRC_DIR}/render/opengl/SDL_render_gl.c
    ${LIBSDL_SRC_DIR}/render/opengl/SDL_shaders_gl.c
    ${LIBSDL_SRC_DIR}/render/opengl/SDL_shaders_gl.h
    ${LIBSDL_SRC_DIR}/render/SDL_d3dmath.c
    ${LIBSDL_SRC_DIR}/render/SDL_d3dmath.h
    ${LIBSDL_SRC_DIR}/render/SDL_render.c
    ${LIBSDL_SRC_DIR}/render/SDL_sysrender.h
    ${LIBSDL_SRC_DIR}/render/SDL_yuv_sw.c
    ${LIBSDL_SRC_DIR}/render/SDL_yuv_sw_c.h
    ${LIBSDL_SRC_DIR}/render/software
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendfillrect.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendfillrect.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendline.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendline.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendpoint.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_blendpoint.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_draw.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_drawline.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_drawline.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_drawpoint.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_drawpoint.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_render_sw.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_render_sw_c.h
    ${LIBSDL_SRC_DIR}/render/software/SDL_rotate.c
    ${LIBSDL_SRC_DIR}/render/software/SDL_rotate.h
    ${LIBSDL_SRC_DIR}/SDL.c
    ${LIBSDL_SRC_DIR}/SDL_assert.c
    ${LIBSDL_SRC_DIR}/SDL_assert_c.h
    ${LIBSDL_SRC_DIR}/SDL_dataqueue.c
    ${LIBSDL_SRC_DIR}/SDL_dataqueue.h
    ${LIBSDL_SRC_DIR}/SDL_error.c
    ${LIBSDL_SRC_DIR}/SDL_error_c.h
    ${LIBSDL_SRC_DIR}/SDL_hints.c
    ${LIBSDL_SRC_DIR}/SDL_internal.h
    ${LIBSDL_SRC_DIR}/SDL_log.c
    ${LIBSDL_SRC_DIR}/sensor/dummy
    ${LIBSDL_SRC_DIR}/sensor/dummy/SDL_dummysensor.c
    ${LIBSDL_SRC_DIR}/sensor/dummy/SDL_dummysensor.h
    ${LIBSDL_SRC_DIR}/sensor/SDL_sensor.c
    ${LIBSDL_SRC_DIR}/sensor/SDL_sensor_c.h
    ${LIBSDL_SRC_DIR}/sensor/SDL_syssensor.h
    ${LIBSDL_SRC_DIR}/stdlib
    ${LIBSDL_SRC_DIR}/stdlib/SDL_getenv.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_iconv.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_malloc.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_qsort.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_stdlib.c
    ${LIBSDL_SRC_DIR}/stdlib/SDL_string.c
    ${LIBSDL_SRC_DIR}/thread
    ${LIBSDL_SRC_DIR}/thread/generic
    ${LIBSDL_SRC_DIR}/thread/generic/SDL_syscond.c
    ${LIBSDL_SRC_DIR}/thread/generic/SDL_sysmutex.c
    ${LIBSDL_SRC_DIR}/thread/generic/SDL_sysmutex_c.h
    ${LIBSDL_SRC_DIR}/thread/generic/SDL_syssem.c
    ${LIBSDL_SRC_DIR}/thread/generic/SDL_systhread.c
    ${LIBSDL_SRC_DIR}/thread/generic/SDL_systhread_c.h
    ${LIBSDL_SRC_DIR}/thread/generic/SDL_systls.c    
    ${LIBSDL_SRC_DIR}/thread/SDL_systhread.h
    ${LIBSDL_SRC_DIR}/thread/SDL_thread.c
    ${LIBSDL_SRC_DIR}/thread/SDL_thread_c.h
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_sysmutex.c
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_syssem.c
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_systhread.c
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_systhread_c.h
    ${LIBSDL_SRC_DIR}/thread/windows/SDL_systls.c
    ${LIBSDL_SRC_DIR}/timer/dummy/SDL_systimer.c
    ${LIBSDL_SRC_DIR}/timer/SDL_timer.c
    ${LIBSDL_SRC_DIR}/timer/SDL_timer_c.h
    ${LIBSDL_SRC_DIR}/video/SDL_blit.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit.h
    ${LIBSDL_SRC_DIR}/video/SDL_blit_0.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_1.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_A.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_auto.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_auto.h
    ${LIBSDL_SRC_DIR}/video/SDL_blit_copy.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_copy.h
    ${LIBSDL_SRC_DIR}/video/SDL_blit_N.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_slow.c
    ${LIBSDL_SRC_DIR}/video/SDL_blit_slow.h
    ${LIBSDL_SRC_DIR}/video/SDL_bmp.c
    ${LIBSDL_SRC_DIR}/video/SDL_clipboard.c
    ${LIBSDL_SRC_DIR}/video/SDL_egl.c
    ${LIBSDL_SRC_DIR}/video/SDL_egl_c.h
    ${LIBSDL_SRC_DIR}/video/SDL_fillrect.c
    ${LIBSDL_SRC_DIR}/video/SDL_pixels.c
    ${LIBSDL_SRC_DIR}/video/SDL_pixels_c.h
    ${LIBSDL_SRC_DIR}/video/SDL_rect.c
    ${LIBSDL_SRC_DIR}/video/SDL_rect_c.h
    ${LIBSDL_SRC_DIR}/video/SDL_RLEaccel.c
    ${LIBSDL_SRC_DIR}/video/SDL_RLEaccel_c.h
    ${LIBSDL_SRC_DIR}/video/SDL_shape.c
    ${LIBSDL_SRC_DIR}/video/SDL_shape_internals.h
    ${LIBSDL_SRC_DIR}/video/SDL_stretch.c
    ${LIBSDL_SRC_DIR}/video/SDL_surface.c
    ${LIBSDL_SRC_DIR}/video/SDL_sysvideo.h
    ${LIBSDL_SRC_DIR}/video/SDL_video.c
    ${LIBSDL_SRC_DIR}/video/SDL_yuv.c
    ${LIBSDL_SRC_DIR}/video/SDL_yuv_c.h
    ${LIBSDL_SRC_DIR}/video/sdlgenblit.pl
    ${LIBSDL_SRC_DIR}/video/windows/SDL_msctf.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_vkeys.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsclipboard.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsclipboard.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsevents.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsevents.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsframebuffer.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsframebuffer.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowskeyboard.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowskeyboard.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmessagebox.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmessagebox.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmodes.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmodes.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmouse.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsmouse.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsopengl.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsopengl.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsshape.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsshape.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowstaskdialog.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsvideo.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowsvideo.h
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowswindow.c
    ${LIBSDL_SRC_DIR}/video/windows/SDL_windowswindow.h
    ${LIBSDL_SRC_DIR}/video/windows/wmmsg.h
    ${LIBSDL_SRC_DIR}/video/yuv2rgb
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/LICENSE
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/README.md
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/yuv_rgb.c
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/yuv_rgb.h
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/yuv_rgb_sse_func.h
    ${LIBSDL_SRC_DIR}/video/yuv2rgb/yuv_rgb_std_func.h
)

add_library(${LIBSDL_NAME} ${LIBSDL_SOURCES})
add_definitions(-DSDL_DISABLE_WINDOWS_IME)
include_directories(${LIBSDL_INCLUDE_PATHS})
target_link_libraries(${LIBSDL_NAME} ${LIBSDL_LINK_LIBRARIES})

###################################################################################################
# Burger lib
###################################################################################################
set(BURGERLIB_INCLUDE_PATHS
    ${GAME_SRC_DIR}
)

set(BURGERLIB_SOURCES
    ${BURGERLIB_SRC_DIR}/burger/burger.h
    ${BURGERLIB_SRC_DIR}/burger/clearthescreen.c
    ${BURGERLIB_SRC_DIR}/burger/detectmouse.c
    #${BURGERLIB_SRC_DIR}/burger/dlzss.s
    ${BURGERLIB_SRC_DIR}/burger/drawarect.c
    ${BURGERLIB_SRC_DIR}/burger/drawmshape.c
    ${BURGERLIB_SRC_DIR}/burger/drawrezshape.c
    ${BURGERLIB_SRC_DIR}/burger/drawshape.c
    ${BURGERLIB_SRC_DIR}/burger/erasembshape.c
    ${BURGERLIB_SRC_DIR}/burger/errormsg.c
    ${BURGERLIB_SRC_DIR}/burger/flushkeys.c
    #${BURGERLIB_SRC_DIR}/burger/fontlib/font3
    #${BURGERLIB_SRC_DIR}/burger/fontlib/font5
    #${BURGERLIB_SRC_DIR}/burger/fontlib/font7
    #${BURGERLIB_SRC_DIR}/burger/fontlib/font9
    #${BURGERLIB_SRC_DIR}/burger/fontlib/nice.fnt
    #${BURGERLIB_SRC_DIR}/burger/fontlib/normal.pal
    ${BURGERLIB_SRC_DIR}/burger/getakey.c
    #${BURGERLIB_SRC_DIR}/burger/getapixel.s
    ${BURGERLIB_SRC_DIR}/burger/getrandom.c
    ${BURGERLIB_SRC_DIR}/burger/getshapeindexptr.c
    ${BURGERLIB_SRC_DIR}/burger/halt.s
    ${BURGERLIB_SRC_DIR}/burger/initytable.c
    ${BURGERLIB_SRC_DIR}/burger/interceptkey.c
    ${BURGERLIB_SRC_DIR}/burger/keyarray.c
    ${BURGERLIB_SRC_DIR}/burger/keycodes.h
    ${BURGERLIB_SRC_DIR}/burger/keymodifiers.c
    ${BURGERLIB_SRC_DIR}/burger/killedsong.c
    ${BURGERLIB_SRC_DIR}/burger/lasttick.c
    ${BURGERLIB_SRC_DIR}/burger/longtoasc.c
    ${BURGERLIB_SRC_DIR}/burger/longwordtoasc.c
    ${BURGERLIB_SRC_DIR}/burger/mousepresent.c
    ${BURGERLIB_SRC_DIR}/burger/music.c
    ${BURGERLIB_SRC_DIR}/burger/mygetch.c
    ${BURGERLIB_SRC_DIR}/burger/mykbhit.c
    ${BURGERLIB_SRC_DIR}/burger/readjoybuttons.c
    ${BURGERLIB_SRC_DIR}/burger/readmouseabs.c
    ${BURGERLIB_SRC_DIR}/burger/readmousebuttons.c
    ${BURGERLIB_SRC_DIR}/burger/readtick.c
    ${BURGERLIB_SRC_DIR}/burger/saveafile.c
    ${BURGERLIB_SRC_DIR}/burger/screenheight.c
    ${BURGERLIB_SRC_DIR}/burger/screenwidth.c
    #${BURGERLIB_SRC_DIR}/burger/setapixel.s
    #${BURGERLIB_SRC_DIR}/burger/showmcga.s
    #${BURGERLIB_SRC_DIR}/burger/showpic.s
    #${BURGERLIB_SRC_DIR}/burger/showpicptr.s
    #${BURGERLIB_SRC_DIR}/burger/swaplong.s
    #${BURGERLIB_SRC_DIR}/burger/swapshort.s
    #${BURGERLIB_SRC_DIR}/burger/swapushort.s
    ${BURGERLIB_SRC_DIR}/burger/systemstate.c
    #${BURGERLIB_SRC_DIR}/burger/test.c
    #${BURGERLIB_SRC_DIR}/burger/testmbshape.s
    #${BURGERLIB_SRC_DIR}/burger/testmshape.s
    ${BURGERLIB_SRC_DIR}/burger/videopointer.c
    ${BURGERLIB_SRC_DIR}/burger/videowidth.c
    ${BURGERLIB_SRC_DIR}/burger/waitakey.c
    ${BURGERLIB_SRC_DIR}/burger/waitevent.c
    #${BURGERLIB_SRC_DIR}/burger/waitjoypress.s
    #${BURGERLIB_SRC_DIR}/burger/waitjoyrelease.s
    ${BURGERLIB_SRC_DIR}/burger/waittick.c
    ${BURGERLIB_SRC_DIR}/burger/waitticks.c
    ${BURGERLIB_SRC_DIR}/burger/waitticksevent.c
    ${BURGERLIB_SRC_DIR}/burger/ytable.c
    ${BURGERLIB_SRC_DIR}/intmath/im_dec2int.c
    #${BURGERLIB_SRC_DIR}/intmath/im_div.s
    #${BURGERLIB_SRC_DIR}/intmath/im_fixdiv.s
    #${BURGERLIB_SRC_DIR}/intmath/im_fixmul.s
    ${BURGERLIB_SRC_DIR}/intmath/im_hiword.c
    ${BURGERLIB_SRC_DIR}/intmath/im_long2fix.c
    ${BURGERLIB_SRC_DIR}/intmath/im_loword.c
    ${BURGERLIB_SRC_DIR}/intmath/im_multiply.c
    ${BURGERLIB_SRC_DIR}/intmath/im_sdivide.c
    ${BURGERLIB_SRC_DIR}/intmath/im_udivide.c
    ${BURGERLIB_SRC_DIR}/intmath/intmath.h
    #${BURGERLIB_SRC_DIR}/mvelib/mvelib.h
    #${BURGERLIB_SRC_DIR}/mvelib/nfadvance.s
    #${BURGERLIB_SRC_DIR}/mvelib/nfhicolordecomp.c
    #${BURGERLIB_SRC_DIR}/mvelib/nfhicolordecomp.s
    #${BURGERLIB_SRC_DIR}/mvelib/nfhicolordecomp.s2
    #${BURGERLIB_SRC_DIR}/mvelib/nfhicolordecomp.snew
)

add_library(${BURGERLIB_NAME} ${BURGERLIB_SOURCES})
include_directories(${BURGERLIB_INCLUDE_PATHS})

###################################################################################################
# Game
###################################################################################################
set(GAME_INCLUDE_PATHS
    ${BURGERLIB_SRC_DIR}/burger
    ${BURGERLIB_SRC_DIR}/intmath
    ${LIBSDL_INCLUDE_DIR}
)

set(GAME_SOURCES
    # ${GAME_SRC_DIR}/blitasm.s
    ${GAME_SRC_DIR}/ammain.c
    ${GAME_SRC_DIR}/base.c
    ${GAME_SRC_DIR}/ceilng.c
    ${GAME_SRC_DIR}/CelUtils.cpp
    ${GAME_SRC_DIR}/CelUtils.h
    ${GAME_SRC_DIR}/change.c
    ${GAME_SRC_DIR}/data.c
    ${GAME_SRC_DIR}/dmain.c
    ${GAME_SRC_DIR}/doom.h
    ${GAME_SRC_DIR}/doomrez.h
    ${GAME_SRC_DIR}/doors.c
    ${GAME_SRC_DIR}/Endian.h
    ${GAME_SRC_DIR}/enemy.c
    ${GAME_SRC_DIR}/floor.c
    ${GAME_SRC_DIR}/fmain.c
    ${GAME_SRC_DIR}/game.c
    ${GAME_SRC_DIR}/info.c
    ${GAME_SRC_DIR}/inmain.c
    ${GAME_SRC_DIR}/inter.c
    ${GAME_SRC_DIR}/lights.c
    ${GAME_SRC_DIR}/mac.c
    ${GAME_SRC_DIR}/Macros.h
    ${GAME_SRC_DIR}/Main.cpp
    ${GAME_SRC_DIR}/map.c
    ${GAME_SRC_DIR}/MapData.cpp
    ${GAME_SRC_DIR}/MapData.h
    ${GAME_SRC_DIR}/maputl.c
    ${GAME_SRC_DIR}/MathUtils.c
    ${GAME_SRC_DIR}/MathUtils.h
    ${GAME_SRC_DIR}/Mem.h    
    ${GAME_SRC_DIR}/mmain.c
    ${GAME_SRC_DIR}/mobj.c
    ${GAME_SRC_DIR}/move.c
    ${GAME_SRC_DIR}/omain.c
    ${GAME_SRC_DIR}/phase1.c
    ${GAME_SRC_DIR}/phase2.c
    ${GAME_SRC_DIR}/phase6.c
    ${GAME_SRC_DIR}/phase7.c
    ${GAME_SRC_DIR}/phase8.c
    ${GAME_SRC_DIR}/plats.c
    ${GAME_SRC_DIR}/pspr.c
    ${GAME_SRC_DIR}/rdata.c
    ${GAME_SRC_DIR}/Resource.h
    ${GAME_SRC_DIR}/ResourceMgr.cpp
    ${GAME_SRC_DIR}/ResourceMgr.h
    ${GAME_SRC_DIR}/Resources.cpp
    ${GAME_SRC_DIR}/Resources.h
    ${GAME_SRC_DIR}/rmain.c
    ${GAME_SRC_DIR}/setup.c
    ${GAME_SRC_DIR}/shoot.c
    ${GAME_SRC_DIR}/sight.c
    ${GAME_SRC_DIR}/slide.c
    ${GAME_SRC_DIR}/sound.c
    ${GAME_SRC_DIR}/sounds.h
    ${GAME_SRC_DIR}/spec.c
    ${GAME_SRC_DIR}/states.h
    ${GAME_SRC_DIR}/stmain.c
    ${GAME_SRC_DIR}/switch.c
    ${GAME_SRC_DIR}/tables.c
    ${GAME_SRC_DIR}/telept.c
    ${GAME_SRC_DIR}/Textures.cpp
    ${GAME_SRC_DIR}/Textures.h
    ${GAME_SRC_DIR}/threedo.c
    ${GAME_SRC_DIR}/tick.c
    ${GAME_SRC_DIR}/user.c
)

add_executable(${GAME_NAME} ${GAME_SOURCES})
include_directories(${GAME_INCLUDE_PATHS})
target_link_libraries(${GAME_NAME} ${BURGERLIB_NAME} ${LIBSDL_NAME})
