set(INCLUDE_PATHS
    "."
)

set(SOURCE_FILES
    "Audio/Audio.cpp"
    "Audio/Audio.h"
    "Audio/AudioData.h"
    "Audio/AudioDataMgr.cpp"
    "Audio/AudioDataMgr.h"
    "Audio/AudioLoader.cpp"
    "Audio/AudioLoader.h"
    "Audio/AudioOutputDevice.cpp"
    "Audio/AudioOutputDevice.h"
    "Audio/AudioSystem.cpp"
    "Audio/AudioSystem.h"
    "Audio/AudioVoice.h"
    "Automap_Main.cpp"
    "Automap_Main.h"
    "Base.cpp"
    "Base.h"
    "Burger.cpp"
    "Burger.h"
    "Ceiling.cpp"
    "Ceiling.h"
    "CelUtils.cpp"
    "CelUtils.h"
    "Change.cpp"
    "Change.h"
    "Data.cpp"
    "Data.h"
    "Doom.h"
    "Doom_Main.cpp"
    "Doom_Main.h"
    "DoomRez.h"
    "Doors.cpp"
    "Doors.h"
    "Endian.h"
    "Enemy.cpp"
    "Enemy.h"
    "Finale_Main.cpp"
    "Finale_Main.h"
    "Finally.h"
    "Floor.cpp"
    "Floor.h"
    "Game.cpp"
    "Game.h"
    "Info.cpp"
    "Info.h"
    "Interactions.cpp"
    "Interactions.h"
    "Intermission_Main.cpp"
    "Intermission_Main.h"
    "Lights.cpp"
    "Lights.h"
    "Macros.h"
    "Map.cpp"
    "Map.h"
    "MapData.cpp"
    "MapData.h"
    "MapObj.cpp"
    "MapObj.h"
    "MapUtil.cpp"
    "MapUtil.h"
    "MathUtils.h"
    "Mem.h"
    "Menu_Main.cpp"
    "Menu_Main.h"
    "Move.cpp"
    "Move.h"
    "Options_Main.cpp"
    "Options_Main.h"
    "Platforms.cpp"
    "Platforms.h"
    "Player.h"
    "PlayerSprites.cpp"
    "PlayerSprites.h"
    "Random.cpp"
    "Random.h"
    "Render.h"
    "Render_Data.cpp"
    "Render_Main.cpp"
    "Render_Phase1.cpp"
    "Render_Phase2.cpp"
    "Render_Phase6.cpp"
    "Render_Phase7.cpp"
    "Render_Phase8.cpp"
    "Resource.h"
    "ResourceMgr.cpp"
    "ResourceMgr.h"
    "Resources.cpp"
    "Resources.h"
    "Setup.cpp"
    "Setup.h"
    "Shoot.cpp"
    "Shoot.h"
    "Sight.cpp"
    "Sight.h"
    "Slide.cpp"
    "Slide.h"
    "Sound.cpp"
    "Sound.h"
    "Sounds.h"
    "Specials.cpp"
    "Specials.h"
    "Sprites.cpp"
    "Sprites.h"
    "states.h"
    "StatusBar_Main.cpp"
    "StatusBar_Main.h"
    "Switch.cpp"
    "Switch.h"
    "Tables.cpp"
    "Tables.h"
    "Teleport.cpp"
    "Teleport.h"
    "Textures.cpp"
    "Textures.h"
    "ThreeDO.cpp"
    "ThreeDO.h"
    "Tick.cpp"
    "Tick.h"
    "User.cpp"
    "User.h"
    "Video.cpp"
    "Video.h"
)

set(OTHER_FILES
    "../TODO.txt"
)

if (PLATFORM_WINDOWS)
    list(APPEND SOURCE_FILES "Main_Windows.cpp")
endif()

if (PLATFORM_MAC)
    list(APPEND SOURCE_FILES "Main_Mac.mm")
endif()

if (COMPILER_MSVC)
    # MSVC: Don't complain about using regular 'std::fopen()' etc.
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif()

add_executable(${GAME_NAME} ${SOURCE_FILES} ${HEADER_FILES} ${OTHER_FILES})
setup_source_groups("${SOURCE_FILES}" "${HEADER_FILES}" "${OTHER_FILES}")

include_directories(${INCLUDE_PATHS})
target_link_libraries(${GAME_NAME} ${LIBSDL_NAME})
